--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
     "test": "vitest run"
   },
   "dependencies": {
+    "@vercel/functions": "^3.1.0",
+    "better-sqlite3": "^12.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.544.0",
+    "ms": "^2.1.3",
     "next": "15.5.3",
+    "rate-limiter-flexible": "^7.3.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "tailwind-merge": "^3.3.1"
@@ -22,6 +26,8 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/better-sqlite3": "^7.6.13",
+    "@types/ms": "^2.1.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
