--- a/package.json
+++ b/package.json
@@ -15,13 +15,15 @@
     "better-sqlite3": "^12.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "iso8601-duration": "^2.1.3",
     "lucide-react": "^0.544.0",
     "ms": "^2.1.3",
     "next": "15.5.3",
     "rate-limiter-flexible": "^7.3.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "zod": "^4.1.11"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
