--- a/package.json
+++ b/package.json
@@ -11,17 +11,31 @@
     "test": "vitest run"
   },
   "dependencies": {
+    "@radix-ui/react-checkbox": "^1.3.3",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slider": "^1.3.6",
+    "@radix-ui/react-slot": "^1.2.3",
     "@vercel/functions": "^3.1.0",
     "better-sqlite3": "^12.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dayjs": "^1.11.18",
+    "focus-trap-react": "^11.0.4",
     "iso8601-duration": "^2.1.3",
+    "ky": "^1.11.0",
     "lucide-react": "^0.544.0",
     "ms": "^2.1.3",
     "next": "15.5.3",
+    "radix-ui": "^1.4.3",
     "rate-limiter-flexible": "^7.3.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-hot-toast": "^2.6.0",
+    "react-virtuoso": "^4.14.1",
+    "swr": "^2.3.6",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.1.11"
   },
