--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "lucide-react": "^0.544.0",
     "ms": "^2.1.3",
     "next": "15.5.3",
+    "pg": "^8.16.3",
     "radix-ui": "^1.4.3",
     "rate-limiter-flexible": "^7.3.1",
     "react": "19.1.0",
@@ -45,6 +46,7 @@
     "@types/better-sqlite3": "^7.6.13",
     "@types/ms": "^2.1.0",
     "@types/node": "^20",
+    "@types/pg": "^8.15.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
