--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "ky": "^1.11.0",
     "lucide-react": "^0.544.0",
     "ms": "^2.1.3",
-    "next": "15.5.3",
+    "next": "^15.5.7",
     "pg": "^8.16.3",
     "radix-ui": "^1.4.3",
     "rate-limiter-flexible": "^7.3.1",
